# HackComputer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: autobuild.yml
CMake/: Application.cmake  CMakeLists.txt  Configure.cmake  CopyTarget.cmake  FindDot.cmake  FindFlutter.cmake  GitUpdate.cmake  Jack2Svg.cmake
Current/: CMakeLists.txt  Doxyfile  Doxyfile.txt.in  MdDox.cfg  build.bat  build.py  clean.bat  clean.py  colors.cfg  dark-colors.cfg
Current/html/: light-style.css
Current/images/: Example.jack  out.dot
Current/markdown/: Hc00.md  Hc01.md  Hc02.md  Hc0201.md  Hc03.md  Hc04.md  Hc05.md  Hc06.md  Hc07.md  Hc08.md  classHack_1_1Assembler_1_1Instruction.md  classHack_1_1Assembler_1_1Parser.md  classHack_1_1Assembler_1_1Scanner.md  classHack_1_1Binding_1_1ComputerWrapper.md  classHack_1_1Binding_1_1RamWrapper.md  classHack_1_1Binding_1_1RomWrapper.md  classHack_1_1Cache.md  classHack_1_1Char.md  classHack_1_1Chips_1_1Add16.md  classHack_1_1Chips_1_1Alu.md  classHack_1_1Chips_1_1And.md  classHack_1_1Chips_1_1And16.md  classHack_1_1Chips_1_1Bit.md  classHack_1_1Chips_1_1BitUtils.md  classHack_1_1Chips_1_1Chip.md  classHack_1_1Chips_1_1Clock.md  classHack_1_1Chips_1_1Computer.md  classHack_1_1Chips_1_1Cpu.md  classHack_1_1Chips_1_1DFlipFlop.md  classHack_1_1Chips_1_1DMux.md  classHack_1_1Chips_1_1DMux4Way.md  classHack_1_1Chips_1_1DMux8Way.md  classHack_1_1Chips_1_1DefaultMemorySegment.md  classHack_1_1Chips_1_1FullAdder.md  classHack_1_1Chips_1_1HalfAdder.md  classHack_1_1Chips_1_1IMemorySegment.md  classHack_1_1Chips_1_1Inc16.md  classHack_1_1Chips_1_1Memory.md  classHack_1_1Chips_1_1Mux.md  classHack_1_1Chips_1_1Mux16.md  (+125 more)
Current/pages/: CMake.h  Dir01.Utils.h  Hc00.MainPage.h  Hc01.Utils.h  Hc02.Chips.h  Hc02Chips01.h  Hc03.Assembler.h  Hc04.VirtualMachine.h  Hc05.Compiler.h  Hc06.Computer.h  Hc07.Bindings.h  Hc08.Extra.h
Current/xml/: ALU_8cpp.xml  ALU_8h.xml  Add16_8cpp.xml  Add16_8h.xml  And16_8cpp.xml  And16_8h.xml  And_8cpp.xml  And_8h.xml  Assembler_2Main_8cpp.xml  Assembler_2Parser_8cpp.xml  Assembler_2Parser_8h.xml  Assembler_2Scanner_8cpp.xml  Assembler_2Scanner_8h.xml  Assembler_2Token_8h.xml  AssemblyDebuggerPrivate_8cpp.xml  AssemblyDebuggerPrivate_8h.xml  AssemblyDebugger_8cpp.xml  AssemblyDebugger_8h.xml  Bindings_8cpp.xml  BitUtils_8h.xml  Bit_8cpp.xml  Bit_8h.xml  CMake_8h.xml  CPU_8cpp.xml  CPU_8h.xml  Char_8cpp.xml  Char_8h.xml  Chip_8h.xml  Chips_2Memory_8cpp.xml  Chips_2Memory_8h.xml  Clock_8cpp.xml  Clock_8h.xml  ColorCache_8cpp.xml  ColorCache_8h.xml  Compiler_2Analyzer_2Main_8cpp.xml  Compiler_2Analyzer_2Parser_8cpp.xml  Compiler_2Analyzer_2Parser_8h.xml  Compiler_2Analyzer_2Scanner_8cpp.xml  Compiler_2Analyzer_2Scanner_8h.xml  Compiler_2Analyzer_2Token_8h.xml  (+326 more)
Source/: CMakeLists.txt
Source/Assembler/: ASM.grm  CMakeLists.txt  Instruction.cpp  Instruction.h  Main.cpp  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Token.cpp  Token.h
Source/Bindings/: Bindings.cpp  CMakeLists.txt
Source/Chips/: ALU.cpp  ALU.h  Add16.cpp  Add16.h  And.cpp  And.h  And16.cpp  And16.h  Bit.cpp  Bit.h  BitUtils.h  CMakeLists.txt  CPU.cpp  CPU.h  Chip.h  Clock.cpp  Clock.h  Computer.cpp  Computer.h  DFlipFlop.cpp  DFlipFlop.h  DMux.cpp  DMux.h  DMux4Way.cpp  DMux4Way.h  DMux8Way.cpp  DMux8Way.h  DefaultMemorySegment.h  FullAdder.cpp  FullAdder.h  HalfAdder.cpp  HalfAdder.h  IMemorySegment.h  Inc16.cpp  Inc16.h  Memory.cpp  Memory.h  Mux.cpp  Mux.h  Mux16.cpp  (+42 more)
Source/Compiler/: CMakeLists.txt
Source/Compiler/Analyzer/: CMakeLists.txt  Jack.grm  Main.cpp  ParseUtils.cpp  ParseUtils.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Token.h
Source/Compiler/Common/: CMakeLists.txt  DotWriter.cpp  DotWriter.h  Node.cpp  Node.h  NodeUtils.cpp  NodeUtils.h  Tree.cpp  Tree.h  XmlWriter.cpp  XmlWriter.h
Source/Compiler/Compiler/: CMakeLists.txt  Main.cpp
Source/Computer/: AssemblyDebugger.cpp  AssemblyDebugger.h  CMakeLists.txt  Common.h  ConsoleRuntime.cpp  ConsoleRuntime.h  Executable.cpp  RuntimeInterface.h  WindowedRuntime.cpp  WindowedRuntime.h
Source/Computer/AssemblyDebugger/: AssemblyDebuggerPrivate.cpp  AssemblyDebuggerPrivate.h
Source/Computer/ConsoleRuntime/: ConsoleRuntimePrivate.cpp  ConsoleRuntimePrivate.h
Source/Computer/Samples/: Fill.asm
Source/Computer/WindowedRuntime/: ScreenMemory.cpp  ScreenMemory.h  WindowedRuntimePrivate.cpp  WindowedRuntimePrivate.h
Source/OperatingSystem/: CMakeLists.txt  Memory.h  Memory.jack
Source/Utils/: CMakeLists.txt  Char.cpp  Char.h  Console.cpp  Console.h  Exception.h  FileSystem.cpp  FileSystem.h  IndexCache.h  String.cpp  String.h
Source/Utils/CommandLine/: Option.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Token.h
Source/Utils/ParserBase/: ParseError.cpp  ParseError.h  ParserBase.cpp  ParserBase.h  ScannerBase.cpp  ScannerBase.h  TokenBase.h
Source/Utils/UserInterface/: ColorCache.cpp  ColorCache.h  Common.h  Context.cpp  Context.h  Math.cpp  Math.h  Platform.cpp  Platform.h  PlatformUnix.cpp  PlatformUnix.h  PlatformWin32.cpp  PlatformWin32.h
Source/Utils/Win32/: CrtUtils.cpp  CrtUtils.h
Source/VirtualMachine/: CMakeLists.txt  Constants.h  Emitter.cpp  Emitter.h  Main.cpp  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Token.h  VM.grm
Test/: CMakeLists.txt  FileCmp.cpp  FileCmp.h  General.cpp  Test1.cpp  Test1Data.inl  Test2.cpp  Test2Data.inl  Test4.cpp  Test5.cpp  TestDirectory.h.in
Test/Assembler/: Add.asm  Add.cmp  Error.asm  Parser1.asm  Parser1.cmp  Parser2.asm  Parser2.cmp  Parser3.asm  Parser3.cmp  Scanner1.asm  Scanner2.asm  Test.asm  Test01.asm
Test/Jack/: README.md  Scan.in  Test01.cmp  Test01.jack  Test02.jack  Test03.jack  Test04.jack  Test05.jack  Test06.jack  Test07.jack  Test08.jack  Test09.jack  Test10.jack  Test11.jack  Test12.jack  Test13.jack  Test14.jack  temp.vm
Test/VM/: Test01.vm  Test02.vm  Test03.vm  Test04.vm  Test05.vm  Test06.vm  Test07.vm  Test08.vm  Test09.vm  Test10.vm  Test11.vm  Test12.vm  Test13.vm  Test14.vm  Test15.vm  Test16.vm  Test17.vm  Test18.vm  Test19.vm  Test20.vm  Test21.vm
(+13 files in other folders)
